Skip to content

Build broken if libplacebo enabled

Hi, I enabled the libplacebo support and I cannot build VLC 3.0.18 anymore... I get the following error:

/usr/lib/gcc/x86_64-pc-linux-gnu/11.3.0/../../../../x86_64-pc-linux-gnu/bin/ld: video_output/opengl/.libs/libgl_plugin_la-vout_helper.o: in function `opengl_deinit_program':
vout_helper.c:(.text+0x5e2): undefined reference to `pl_context_destroy'
/usr/lib/gcc/x86_64-pc-linux-gnu/11.3.0/../../../../x86_64-pc-linux-gnu/bin/ld: video_output/opengl/.libs/libgl_plugin_la-vout_helper.o: in function `opengl_init_program':
vout_helper.c:(.text+0xdf1): undefined reference to `pl_context_create'
collect2: error: ld returned 1 exit status
make[4]: *** [Makefile:15654: libgl_plugin.la] Error 1
make[4]: *** Waiting for unfinished jobs....

Iade

Edited by Marvin Scholz
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information