vout_opengl: add compatibility alias for libplacebo v5

This fixes compilation for now, albeit with many deprecation warnings.
It will probably break again whenever libplacebo v6 drops these
deprecated fields as well, but hopefully VLC v4 will be released by
then.

Fixes: #27624